--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -104,4 +104,5 @@ const { title, description } = Astro.props;
   defer
   src="https://cloud.umami.is/script.js"
   data-website-id="bf52233a-21e5-41cc-a512-6a7234c50f33"
+  data-domains="lessicofamiliare.it"
 ></script>
