--- a/src/pages/contatti-errore.astro
+++ b/src/pages/contatti-errore.astro
@@ -4,7 +4,7 @@ import BannerStrip from "../components/BannerStrip.astro";
 import Hero from "../components/Hero.astro";
 
 const base = import.meta.env.BASE_URL;
-const heroImg = `${base}images/pages/LF_Home2.png`;
+const heroImg = "LF_Home2.png";
 ---
 
 <Layout title="Ops" description="Invio non riuscito">
@@ -43,3 +43,4 @@ const heroImg = `${base}images/pages/LF_Home2.png`;
 <script is:inline>
   window.umami?.track("Form: Invia richiesta - errore");
 </script>
+
