--- a/src/pages/cookie-policy.astro
+++ b/src/pages/cookie-policy.astro
@@ -4,7 +4,7 @@ import BannerStrip from "../components/BannerStrip.astro";
 import Hero from "../components/Hero.astro";
 
 const base = import.meta.env.BASE_URL;
-const heroImg = `${base}images/pages/LF_Home2.png`;
+const heroImg = "LF_Home2.png";
 ---
 
 <Layout title="Cookie policy" description="Informativa sui cookie di Lessico Familiare.">
@@ -100,3 +100,4 @@ const heroImg = `${base}images/pages/LF_Home2.png`;
     padding-top: 0;
   }
 </style>
+
