--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Cards from "../components/Cards.astro";
 import Hero from "../components/Hero.astro";
 
 const base = import.meta.env.BASE_URL;
-const heroImg = `${base}images/pages/LF_Home.png`;
+const heroImg = "LF_Home.png";
 const services = [
   {
     title: "Famiglie",
@@ -253,4 +253,5 @@ const services = [
     window.addEventListener("keydown", onKeyDown);
   })();
 </script>
+
 
