--- a/src/pages/prodotti.astro
+++ b/src/pages/prodotti.astro
@@ -4,7 +4,7 @@ import BannerStrip from "../components/BannerStrip.astro";
 import Hero from "../components/Hero.astro";
 
 const base = import.meta.env.BASE_URL;
-const heroImg = `${base}images/pages/LF_Prodotti.png`;
+const heroImg = "LF_Prodotti.png";
 ---
 
 <Layout
@@ -217,3 +217,4 @@ const heroImg = `${base}images/pages/LF_Prodotti.png`;
     margin: -0.25rem 0 1rem;
   }
 </style>
+
