--- a/src/pages/reti.astro
+++ b/src/pages/reti.astro
@@ -6,7 +6,7 @@ import CTA from "../components/CTA.astro";
 import E_Cards from "../components/E_Cards.astro";
 
 const base = import.meta.env.BASE_URL;
-const heroImg = `${base}images/pages/LF_Reti.png`;
+const heroImg = "LF_Reti.png";
 
 const partnerGroups = [
   {
@@ -110,3 +110,4 @@ const partnerGroups = [
     padding-top: 0;
   }
 </style>
+
