--- a/src/pages/servizi.astro
+++ b/src/pages/servizi.astro
@@ -6,7 +6,7 @@ import Cards from "../components/Cards.astro";
 import CTA from "../components/CTA.astro";
 
 const base = import.meta.env.BASE_URL;
-const heroImg = `${base}images/pages/LF_Servizi.png`;
+const heroImg = "LF_Servizi.png";
 
 const services = [
   {
@@ -104,3 +104,4 @@ const services = [
     padding-top: 0;
   }
 </style>
+
