--- a/src/pages/contatti-grazie.astro
+++ b/src/pages/contatti-grazie.astro
@@ -4,7 +4,7 @@ import BannerStrip from "../components/BannerStrip.astro";
 import Hero from "../components/Hero.astro";
 
 const base = import.meta.env.BASE_URL;
-const heroImg = `${base}images/pages/LF_Home2.png`;
+const heroImg = "LF_Home2.png";
 ---
 
 <Layout title="Grazie" description="Messaggio inviato">
@@ -41,3 +41,4 @@ const heroImg = `${base}images/pages/LF_Home2.png`;
 <script is:inline>
   window.umami?.track("Form: Invia richiesta - successo");
 </script>
+
