--- a/src/pages/contatti.astro
+++ b/src/pages/contatti.astro
@@ -4,7 +4,7 @@ import BannerStrip from "../components/BannerStrip.astro";
 import Hero from "../components/Hero.astro";
 
 const base = import.meta.env.BASE_URL;
-const heroImg = `${base}images/pages/LF_Contatti.png`;
+const heroImg = "LF_Contatti.png";
 ---
 
 <Layout title="Contatti" description="Contatta Lessico Familiare">
@@ -322,3 +322,4 @@ const heroImg = `${base}images/pages/LF_Contatti.png`;
     });
   })();
 </script>
+
