--- a/src/pages/metodo.astro
+++ b/src/pages/metodo.astro
@@ -4,7 +4,7 @@ import BannerStrip from "../components/BannerStrip.astro";
 import Hero from "../components/Hero.astro";
 
 const base = import.meta.env.BASE_URL;
-const heroImg = `${base}images/pages/LF_Metodo.png`;
+const heroImg = "LF_Metodo.png";
 ---
 
 <Layout
@@ -66,3 +66,4 @@ const heroImg = `${base}images/pages/LF_Metodo.png`;
     padding-top: 0;
   }
 </style>
+
