--- a/src/pages/note-legali.astro
+++ b/src/pages/note-legali.astro
@@ -4,7 +4,7 @@ import BannerStrip from "../components/BannerStrip.astro";
 import Hero from "../components/Hero.astro";
 
 const base = import.meta.env.BASE_URL;
-const heroImg = `${base}images/pages/LF_Home2.png`;
+const heroImg = "LF_Home2.png";
 ---
 
 <Layout title="Note legali" description="Informazioni legali su Lessico Familiare.">
@@ -108,3 +108,4 @@ const heroImg = `${base}images/pages/LF_Home2.png`;
     padding-top: 0;
   }
 </style>
+
