--- a/src/pages/servizi/scuole.astro
+++ b/src/pages/servizi/scuole.astro
@@ -5,7 +5,7 @@ import Hero from "../../components/Hero.astro";
 import CTA from "../../components/CTA.astro";
 
 const base = import.meta.env.BASE_URL;
-const heroImg = `${base}images/pages/LF_Servizi_Scuola.png`;
+const heroImg = "LF_Servizi_Scuola.png";
 ---
 
 <Layout
@@ -93,4 +93,5 @@ const heroImg = `${base}images/pages/LF_Servizi_Scuola.png`;
     padding-top: 0;
   }
 </style>
+
 
